made some changes in local with npm and node commands

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Satheesh. This my  webapp.
+            Hi! I am Satheesh. This my  webapp. From local machine http server of node.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
